The integ ruby process needs more heap and permgen