@@ -452,6 +452,7 @@
         <groupId>de.saumya.mojo</groupId>
         <artifactId>rspec-maven-plugin</artifactId>
         <configuration>
+          <jrubyJvmArgs>-XX:MaxPermSize=256m -Xmx512m</jrubyJvmArgs>
           <systemProperties>
             <property>
               <name>max.heap</name>
